--- a/style.css
+++ b/style.css
@@ -175,7 +175,7 @@ footer {
     right: 0;
     top: 60px;
     width: 100%;
-    padding: 10px 0;
+    padding: 10px 20px;
   }
   .nav-links.active {
     display: flex;
